--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,11 +1,48 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+<html>
+  <head>
+    <title>Simple Marker</title>
+    <script>
+      const DUBLIN_LATITUDE = 53.3498;
+      const DUBLIN_LONGITUDE = 6.2603;
+        function initMap() {
+        const dublinCoordinates = { lat: DUBLIN_LATITUDE, lng: DUBLIN_LONGITUDE };
+        const map = new google.maps.Map(document.getElementById("map"), {
+            zoom: 4,
+            center: dublinCoordinates,
+        });
+
+        new google.maps.Marker({
+            position: dublinCoordinates,
+            map,
+            title: "Hello World!",
+        });
+        }
+
+        window.initMap = initMap;
+    </script>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+
+      /* Optional: Makes the sample page fill the window. */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ98fwTGvjaUu-a2pFBnd61ui-dQ6oT30&callback=initMap&v=weekly"
+      defer
+    ></script>
+  </body>
 </html>
