--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,30 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dublin Bikes</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-</head>
-<body>
-   <h1>Welcome to Dublin Bikes</h1>
-</body>
+<html>
+  <head>
+    <title>Simple Marker</title>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 80%;
+      }
+
+      /* Optional: Makes the sample page fill the window. */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ98fwTGvjaUu-a2pFBnd61ui-dQ6oT30&callback=initMap&v=weekly"
+      defer
+    ></script>
+  </body>
 </html>
