--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,26 +3,7 @@
 <html>
   <head>
     <title>Simple Marker</title>
-    <script>
-      const DUBLIN_LATITUDE = 53.3498;
-      const DUBLIN_LONGITUDE = 6.2603;
-        function initMap() {
-        const dublinCoordinates = { lat: DUBLIN_LATITUDE, lng: DUBLIN_LONGITUDE };
-        const map = new google.maps.Map(document.getElementById("map"), {
-            zoom: 4,
-            center: dublinCoordinates,
-        });
-
-        new google.maps.Marker({
-            position: dublinCoordinates,
-            map,
-            title: "Hello World!",
-        });
-        }
-
-        window.initMap = initMap;
-    </script>
-    <style>
+    <script src="{{url_for('static', filename='index.js')}}"></script><style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
