--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -4,3 +4,17 @@ h1 {
     text-align: center;
     padding: 10px;
 }
+
+/* Always set the map height explicitly to define the size of the div
+* element that contains the map. */
+#map {
+    height: 100%;
+}
+
+/* Optional: Makes the sample page fill the window. */
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
