--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,21 +4,7 @@
   <head>
     <title>Simple Marker</title>
     <script type="module" src="{{url_for('static', filename='index.js')}}"></script>
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-
-      /* Optional: Makes the sample page fill the window. */
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
     <div id="map"></div>
