--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Simple Marker</title>
     <script type="module" src="{{url_for('static', filename='index.js')}}"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   </head>
   <body>
     <div id="map"></div>
