--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -8,7 +8,7 @@ h1 {
 /* Always set the map height explicitly to define the size of the div
 * element that contains the map. */
 #map {
-    height: 100%;
+    height: 90%;
 }
 
 /* Optional: Makes the sample page fill the window. */
@@ -18,3 +18,29 @@ body {
     margin: 0;
     padding: 0;
 }
+
+
+/* START SECTION */
+/* nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+} */
+#content {
+    display: flex;
+    margin: 0rem -1rem;
+}
+
+#content .right {
+    flex-grow: 1;
+    height: 100vh;
+}
+#sidebar {
+    width: 30vw;
+    background-color: rgba(255, 255, 255, 0.262);
+}
+
+#search-form {
+    margin: 1rem;
+}
+/* END SECTION */
