--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,16 +1,84 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>Simple Marker</title>
     <script type="module" src="{{url_for('static', filename='index.js')}}"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
   </head>
   <body>
-    <div id="map"></div>
-    <script
-    src="https://maps.googleapis.com/maps/api/js?key={{ apiKey }}&callback=initMap&v=weekly"
-    defer
-  ></script>
+    <main class="container-fluid">
+      <nav>
+        <ul>
+          <li><strong>Acme Corp</strong></li>
+        </ul>
+        <ul>
+          <li><a href="#" class="contrast">About</a></li>
+          <li><a href="#" class="contrast">Services</a></li>
+          <li><a href="#" class="contrast">Products</a></li>
+        </ul>
+      </nav>
+      <!-- <hgroup>
+        <h2>Dublin Bike Finder</h2>
+        <p>Lick sellotape cat mojo making bread</p>
+      </hgroup> -->
+      <div id="content">
+        <div class="container left" id="sidebar">
+          <div id="search-panel">
+            <h2>Find Bike Stations</h2>
+            <form id="search-form">
+              <fieldset>
+                <label for="start-location"
+                  >Start Location:
+                  <input type="search" id="start-location" name="start-location" required />
+                </label>
+                <label for="end-location"
+                  >End Location:
+                  <input type="search" id="end-location" name="end-location" required />
+                </label>
+                <!-- <small>Litter kitter kitty litty little kitten big roar roar feed me</small> -->
+                <label for="departure-time"
+                  >Departure Time:
+                  <input type="datetime-local" id="departure-time" name="departure-time" required />
+                </label>
+              </fieldset>
+              <button type="submit">Search</button>
+            </form>
+          </div>
+
+          <div id="results">
+            <h2>Route Options</h2>
+            <div id="filter-icon"><img src="filter-icon.png" alt="Filter Icon" /></div>
+            <div id="sort-icons">
+              <img src="sort-by-walking-time.png" alt="Sort by Walking Time" />
+              <img src="sort-by-biking-time.png" alt="Sort by Biking Time" />
+              <img src="sort-by-total-time.png" alt="Sort by Total Time" />
+            </div>
+            <ul id="route-list">
+              <details open>
+                <summary>Route 1</summary>
+                <p>...</p>
+              </details>
+              <hr />
+              <details open>
+                <summary>Route 2</summary>
+                <p>...</p>
+              </details>
+              <hr />
+              <details open>
+                <summary>Route 3</summary>
+                <p>...</p>
+              </details>
+              <hr />
+              <span aria-busy="true">Generating your link...</span>
+              <progress></progress>
+              <!-- TODO modals https://picocss.com/docs/modal -->
+            </ul>
+          </div>
+        </div>
+        <div class="container right" id="map"></div>
+      </div>
+    </main>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ apiKey }}&callback=initMap&v=weekly" defer></script>
   </body>
 </html>
