can render simple directions

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -79,6 +79,6 @@
         <div class="container right" id="map"></div>
       </div>
     </main>
-    <script src="https://maps.googleapis.com/maps/api/js?key={{ apiKey }}&callback=initMap&v=weekly" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ apiKey }}&libraries=places&callback=initMap&v=weekly" defer></script>
   </body>
 </html>
