--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -1,3 +1,7 @@
+:root {
+    --li-vertical-padding: calc(2 * var(--pico-nav-element-spacing-vertical));
+  }
+
 h1 {
     border: 2px #eee solid;
     color: brown;
@@ -19,6 +23,9 @@ body {
     padding: 0;
 }
 
+.container-fluid {
+    height: 100vh;
+}
 
 /* START SECTION */
 /* nav {
@@ -29,19 +36,28 @@ body {
 #content {
     display: flex;
     margin: 0rem -1rem;
+    height: 100%;
+    /* height: calc(100vh - var(--total-navbar-height)); */
 }
 
 #content .right {
     flex-grow: 1;
-    height: 100vh;
+    /* height: calc(100vh - (var(--li-vertical-padding) + calc(2 * var(--pico-block-spacing-vertical)))); */
+    height: 100%;
+    /* height: 100vh; */
 }
 #sidebar {
     width: 30vw;
-    background-color: rgba(255, 255, 255, 0.262);
+    margin: 0 2rem;
 }
 
 #search-form {
     margin: 1rem;
+}
+
+#results {
+    overflow: scroll;
+    height: 50vh;
 }
 
 #map [role=button], #map [type=button],
