--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -62,6 +62,7 @@
         <div class="container right" id="map"></div>
       </div>
     </main>
+    <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key={{ apiKey }}&libraries=places,geometry,marker&callback=initMap&v=weekly" defer></script>
   </body>
 </html>
