show current and hourly weather

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,12 +13,11 @@
         <ul>
           <li><strong>Bike Finder</strong></li>
         </ul>
-        <ul>
-          <li><a href="#" class="contrast">About</a></li>
-          <li><a href="#" class="contrast">Services</a></li>
-          <li><a href="#" class="contrast">Products</a></li>
-        </ul>
+        <ul id="current-weather"></ul>
       </nav>
+      <div id="weather-details">
+        <div></div>
+      </div>
       <!-- <hgroup>
         <h2>Dublin Bike Finder</h2>
         <p>Lick sellotape cat mojo making bread</p>
