--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -65,4 +65,53 @@ body {
     background-color: unset!important;
     border: unset!important;
 }
+
+#current-weather {
+    cursor: pointer;
+}
+
+#current-weather:hover {
+    background-color: var(--pico-primary-background);
+}
+
+#weather-details {
+    visibility: hidden;
+    width: 500px;
+    height: 150px;
+    position: absolute;
+    right: 0px;
+    z-index: 1;
+    overflow-x: scroll;
+    background-color: var(--pico-background-color);
+    box-shadow: -7px 8px 14px -4px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -7px 8px 14px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: -7px 8px 14px -4px rgba(0,0,0,0.75);
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--pico-color);
+}
+
+#weather-details > div {
+    display: flex;
+}
+
+.forecast-time {
+    /* font-size: 0.7rem; */
+}
+
+.weather-details-el {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-shrink: 0;
+    margin: 10px;
+    padding-right: 20px;
+    border-right: 1px solid;
+}
 /* END SECTION */
