--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -58,6 +58,33 @@ body {
 #results {
     overflow: scroll;
     height: 50vh;
+    display: none;
+    height: 100%;
+    font-size: 12px;
+}
+
+.adp-maneuver, .adp-summary {
+    color: var(--pico-color);
+}
+
+#results > td {
+    padding: 5px;
+    border-bottom: unset;
+}
+
+.adp-warnbox {
+    display: none;
+}
+
+#back-button {
+    position: absolute;
+    left: 11px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+#back-button:hover {
+    opacity: 0.5;
 }
 
 #map [role=button], #map [type=button],
