--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Simple Marker</title>
     <script type="module" src="{{url_for('static', filename='index.js')}}"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
   </head>
@@ -27,7 +28,6 @@
           <div id="search-panel">
             <form id="search-form">
               <fieldset>
-                <!-- TODO: placeholders -->
                 <input type="search" placeholder="From..." id="start-location" name="start-location" required />
                 <input type="search" placeholder="To..." id="end-location" name="end-location" required />
                 <label for="departure-time"
@@ -40,6 +40,7 @@
           </div>
 
           <div id="results">
+            <i id="back-button" class="fa fa-chevron-left"></i>
             <h5>Suggested Route</h5>
             <div id="leg1Panel"></div>
             <div id="leg2Panel"></div>
