put legs in accordions

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -76,6 +76,15 @@ body {
     display: none;
 }
 
+.adp-text {
+    padding: 0;
+    border: none;
+}
+
+#results img {
+    max-width: unset;
+}
+
 #back-button {
     position: absolute;
     left: 11px;
