--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -151,3 +151,31 @@ body {
     border-right: 1px solid;
 }
 /* END SECTION */
+
+
+.infowindow-content {
+    width: 300px;
+    color: var(--pico-color);
+    padding: 1rem;
+}
+
+.infowindow-content .header {
+    display: flex;
+    flex-direction: column;
+}
+.infowindow-content .header div {
+    display: flex;
+}
+.infowindow-content .header div span {
+    margin: 0 10px;
+}
+
+
+.gm-style .gm-style-iw-c, 
+.gm-style .gm-style-iw-c * {
+    background-color: var(--pico-background-color);
+}
+
+.gm-style-iw-d {
+    overflow: hidden!important;
+}
