--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -170,12 +170,13 @@ body {
     margin: 0 10px;
 }
 
-
 .gm-style .gm-style-iw-c, 
 .gm-style .gm-style-iw-c * {
     background-color: var(--pico-background-color);
+    color: var(--pico-color);
 }
 
 .gm-style-iw-d {
     overflow: hidden!important;
 }
+
