--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -36,6 +36,24 @@
             </form>
           </div>
 
+          <dialog id="modal">
+            <article>
+              <h2>Predicted unavailability at nearest bike stations</h2>
+              <p>
+                According to our predictions, one or more bike stations in this route will be 
+                unavailable at this time due to lack of bikes to pick up or lack of stands to park at. Would
+                you like to proceed using the next nearest bike stand or ignore predictions and include unavailable
+                stations?
+              </p>
+              <footer>
+                <button className="secondary" id="cancelButton">
+                  Ignore predictions
+                </button>
+                <button id="confirmButton">Yes</button>
+              </footer>
+            </article>
+          </dialog>
+
           <div id="results">
             <i id="back-button" class="fa fa-chevron-left"></i>
             <h5>Suggested Route</h5>
