if start and end station are the same, just walk

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -47,9 +47,9 @@
               </p>
               <footer>
                 <button className="secondary" id="cancelButton">
-                  Ignore predictions
+                  Include unavailable stations
                 </button>
-                <button id="confirmButton">Yes</button>
+                <button id="confirmButton">Use next nearest station</button>
               </footer>
             </article>
           </dialog>
