error handling improved plus modal

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -54,6 +54,14 @@
               </footer>
             </article>
           </dialog>
+  
+          <dialog id="error-modal">
+            <article>
+              <button aria-label="Close" rel="prev" id="close-error-modal"></button>
+              <h2>Something went wrong!</h2>
+              <p id="error-text"></p>
+            </article>
+          </dialog>
 
           <div id="results">
             <i id="back-button" class="fa fa-chevron-left"></i>
